// Comprehensive type conflict test cases for v2
// This file covers supported conflict types for testing
syntax = "proto2";

package space.alnovis.protowrapper.it.proto.v2;

option java_package = "space.alnovis.protowrapper.it.proto.v2";
option java_outer_classname = "Conflicts";

import "v2/common.proto";

// =============================================================================
// ENUMS FOR INT_ENUM CONFLICTS
// =============================================================================

enum ConflictStatusEnum {
    CONFLICT_STATUS_UNKNOWN = 0;
    CONFLICT_STATUS_PENDING = 1;
    CONFLICT_STATUS_ACTIVE = 2;
    CONFLICT_STATUS_COMPLETED = 3;
    CONFLICT_STATUS_CANCELLED = 4;
    CONFLICT_STATUS_FAILED = 5;
}

enum ConflictPriorityEnum {
    CONFLICT_PRIORITY_LOW = 0;
    CONFLICT_PRIORITY_NORMAL = 1;
    CONFLICT_PRIORITY_HIGH = 2;
    CONFLICT_PRIORITY_URGENT = 3;
    CONFLICT_PRIORITY_CRITICAL = 4;
}

enum CategoryEnum {
    CATEGORY_GENERAL = 0;
    CATEGORY_TECHNICAL = 1;
    CATEGORY_BUSINESS = 2;
    CATEGORY_PERSONAL = 3;
}

enum TypeEnum {
    TYPE_UNDEFINED = 0;
    TYPE_PRIMARY = 1;
    TYPE_SECONDARY = 2;
    TYPE_AUXILIARY = 3;
}

enum CodeEnum {
    CODE_NONE = 0;
    CODE_SUCCESS = 1;
    CODE_WARNING = 2;
    CODE_ERROR = 3;
}

// =============================================================================
// MESSAGES FOR PRIMITIVE_MESSAGE CONFLICTS
// =============================================================================

message RefInfo {
    required int32 ref_id = 1;
    optional string ref_type = 2;
    optional Date created_at = 3;
}

message TextInfo {
    required string content = 1;
    optional string encoding = 2;
    optional int32 length = 3;
}

message TimestampInfo {
    required int64 seconds = 1;
    optional int32 nanos = 2;
    optional string timezone = 3;
}

message ReferenceInfo {
    required int32 ref_number = 1;
    optional string ref_name = 2;
}

// =============================================================================
// INT_ENUM CONFLICTS (int32 in v1 -> enum in v2)
// =============================================================================

message IntEnumConflicts {
    // Case 1: Simple int to enum
    required ConflictStatusEnum status = 1;      // was int32 in v1

    // Case 2: Optional int to enum
    optional ConflictPriorityEnum priority = 2;  // was int32 in v1

    // Case 3: Repeated int to enum
    repeated CategoryEnum categories = 3;        // was repeated int32 in v1

    // Non-conflicting fields
    required string name = 10;
    optional int32 version = 11;

    // V2-only fields
    optional string description = 12;
    optional Date updated_at = 13;
}

// =============================================================================
// WIDENING CONFLICTS (smaller type -> larger type)
// =============================================================================

message WideningConflicts {
    // Case 1: int32 -> int64
    required int64 small_counter = 1;    // was int32 in v1

    // Case 2: int32 -> double
    required double integer_value = 2;   // was int32 in v1

    // Case 3: float -> double
    required double single_precision = 3; // was float in v1

    // Case 4: sint32 -> sint64
    optional sint64 signed_small = 4;    // was sint32 in v1

    // Case 5: uint32 -> uint64
    optional uint64 unsigned_small = 5;  // was uint32 in v1

    // Non-conflicting
    required string identifier = 10;
    optional string description = 11;

    // V2-only
    optional int64 extra_counter = 12;
}

// =============================================================================
// STRING_BYTES CONFLICTS
// =============================================================================

message StringBytesConflicts {
    // Case 1: string in v1 -> bytes in v2
    required bytes text_data = 1;        // was string in v1

    // Case 2: Optional string -> bytes
    optional bytes optional_text = 2;    // was string in v1

    // Case 3: Repeated string -> bytes
    repeated bytes text_list = 3;        // was repeated string in v1

    // Non-conflicting
    required string identifier = 10;
    optional string label = 11;

    // V2-only
    optional string encoding = 12;
}

// =============================================================================
// PRIMITIVE_MESSAGE CONFLICTS (primitive -> message)
// =============================================================================

message PrimitiveMessageConflicts {
    // Case 1: int32 in v1 -> message in v2
    required RefInfo simple_ref = 1;     // was int32 in v1

    // Case 2: string in v1 -> message in v2
    required TextInfo text_ref = 2;      // was string in v1

    // Case 3: int64 in v1 -> message in v2
    optional TimestampInfo timestamp_value = 3;  // was int64 in v1

    // Non-conflicting
    required string name = 10;
    optional string code = 11;

    // V2-only
    optional Date created_at = 12;
}

// =============================================================================
// MULTIPLE CONFLICTS IN SAME MESSAGE
// =============================================================================

message MultipleConflicts {
    // INT_ENUM conflicts
    required ConflictStatusEnum status = 1;      // was int32 in v1
    required ConflictPriorityEnum priority = 2;  // was int32 in v1

    // WIDENING conflicts
    required int64 count = 3;            // was int32 in v1
    required double ratio = 4;           // was float in v1

    // STRING_BYTES conflict
    required bytes payload = 5;          // was string in v1

    // PRIMITIVE_MESSAGE conflict
    optional ReferenceInfo reference = 6; // was int32 in v1

    // Non-conflicting
    required string id = 10;
    optional string name = 11;

    // V2-only fields
    optional string category = 12;
    optional Date modified_at = 13;
}

// =============================================================================
// REPEATED FIELD CONFLICTS
// =============================================================================

message RepeatedConflicts {
    // Repeated int32 -> repeated int64 (WIDENING)
    repeated int64 numbers = 1;          // was repeated int32 in v1

    // Repeated int32 -> repeated enum (INT_ENUM)
    repeated CodeEnum codes = 2;         // was repeated int32 in v1

    // Repeated string -> repeated bytes (STRING_BYTES)
    repeated bytes texts = 3;            // was repeated string in v1

    // Repeated float -> repeated double (WIDENING)
    repeated double values = 4;          // was repeated float in v1

    required string batch_id = 10;

    // V2-only
    optional int32 item_count = 11;
}

// =============================================================================
// VERSION-SPECIFIC FIELDS
// =============================================================================

message VersionSpecificFields {
    // Common fields
    required string id = 1;
    required string name = 2;

    // V1-only fields are REMOVED in v2 (fields 3, 4 don't exist)

    // Fields that exist in both but with conflicts
    required ConflictStatusEnum status = 5;      // was int32 in v1

    optional string description = 10;

    // V2-only fields (NEW)
    optional string new_format = 11;
    optional Date created_at = 12;
    optional string category = 13;
}

// =============================================================================
// ENUM VALUE CONFLICTS (same enum name, different values)
// =============================================================================

enum SharedEnumV2 {
    SHARED_UNKNOWN = 0;
    SHARED_VALUE_A = 1;
    SHARED_VALUE_B = 2;
    SHARED_VALUE_C = 3;  // NEW in v2
    SHARED_VALUE_D = 4;  // NEW in v2
}

message EnumValueConflicts {
    required SharedEnumV2 shared_type = 1;  // Same field, enum has more values
    required string data = 2;

    // V2-only
    optional string extra = 3;
}

// =============================================================================
// SIMPLE NESTED CONFLICTS (without builder complexity)
// =============================================================================

message SimpleNestedConflicts {
    required string id = 1;

    // Nested message with type changes from v1
    message InnerData {
        required int64 value = 1;        // was int32 in v1 (WIDENING)
        required TypeEnum type_code = 2; // was int32 in v1 (INT_ENUM)
        optional bytes data = 3;         // was string in v1 (STRING_BYTES)

        // V2-only nested field
        optional string metadata = 4;
    }

    required InnerData data = 2;
    optional string description = 10;

    // V2-only
    optional Date last_updated = 11;
}

// =============================================================================
// NESTED PRIMITIVE_MESSAGE CONFLICTS
// Tests the case where a nested message type is used in PRIMITIVE_MESSAGE conflict.
// This is the scenario that was broken with ParentTicket in domain project.
// =============================================================================

message NestedPrimitiveMessageConflicts {
    required string id = 1;
    required string name = 2;

    // Nested message definition (same as v1 but now used)
    message ParentRef {
        required string ref_number = 1;
        optional string ref_type = 2;
    }

    // In v1: was primitive int32
    // In v2: nested message ParentRef
    optional ParentRef parent_id = 3;       // was int32 in v1 (PRIMITIVE_MESSAGE)

    // Non-conflicting fields
    optional string description = 10;

    // V2-only field
    optional Date created_at = 11;
}

// =============================================================================
// FLOAT_DOUBLE CONFLICTS (float -> double, separate from integer widening)
// Tests the FLOAT_DOUBLE conflict type with proper narrowing validation.
// =============================================================================

message FloatDoubleConflicts {
    // Case 1: Required float -> double
    required double temperature = 1;     // was float in v1

    // Case 2: Optional float -> double
    optional double pressure = 2;        // was float in v1

    // Case 3: Multiple float fields
    required double humidity = 3;        // was float in v1
    optional double wind_speed = 4;      // was float in v1

    // Non-conflicting fields
    required string sensor_id = 10;
    optional string location = 11;

    // V2-only fields
    optional string calibration_id = 12;
    optional Date last_reading = 13;
}

// =============================================================================
// SIGNED_UNSIGNED CONFLICTS (int32 -> uint32, sint32 vs int32, etc.)
// Tests the SIGNED_UNSIGNED conflict type where Java types are the same (int/long)
// but protobuf types differ in signedness semantics.
// =============================================================================

message SignedUnsignedConflicts {
    // Case 1: uint32 (unsigned) - was int32 (signed) in v1
    // Both map to Java int, but uint32 can have values > Integer.MAX_VALUE
    required uint32 counter = 1;         // was int32 in v1

    // Case 2: Optional uint32 - was int32 in v1
    optional uint32 optional_count = 2;  // was int32 in v1

    // Case 3: int32 (varint) - was sint32 (ZigZag) in v1
    // Different wire encodings for negative numbers
    optional int32 delta = 3;            // was sint32 in v1

    // Case 4: fixed32 (unsigned fixed) - was sfixed32 (signed fixed) in v1
    optional fixed32 checksum = 4;       // was sfixed32 in v1

    // Case 5: uint64 - was int64 (64-bit signed/unsigned conflict)
    optional uint64 big_counter = 5;     // was int64 in v1

    // Non-conflicting fields
    required string id = 10;
    optional string name = 11;

    // V2-only fields
    optional string description = 12;
}

// =============================================================================
// REPEATED SIGNED_UNSIGNED CONFLICTS
// Tests signed/unsigned conflicts with repeated fields.
// =============================================================================

message RepeatedSignedUnsignedConflicts {
    // Repeated uint32 - was repeated int32 in v1
    repeated uint32 counters = 1;        // was repeated int32 in v1

    // Repeated int32 - was repeated sint32 in v1
    repeated int32 deltas = 2;           // was repeated sint32 in v1

    // Repeated uint64 - was repeated int64 in v1
    repeated uint64 big_counters = 3;    // was repeated int64 in v1

    required string batch_id = 10;

    // V2-only field
    optional int32 count = 11;
}

// =============================================================================
// PURE BYTES FIELDS (no conflict - bytes in both versions)
// Tests that bytes fields work correctly in builders.
// This is the scenario that was broken: byte[] -> ByteString conversion missing.
// =============================================================================

message BytesFieldsTest {
    required string id = 1;

    // Case 1: Required bytes field
    required bytes binary_data = 2;

    // Case 2: Optional bytes field
    optional bytes optional_binary = 3;

    // Case 3: Repeated bytes field
    repeated bytes binary_list = 4;

    // Case 4: Bytes field in nested message
    message BinaryPayload {
        required bytes content = 1;
        optional bytes signature = 2;
        optional string content_type = 3;
    }

    optional BinaryPayload payload = 5;

    // Non-conflicting fields
    optional string description = 10;

    // V2-only field
    optional string metadata = 11;
}

// =============================================================================
// REPEATED_SINGLE CONFLICTS (repeated in v1 -> singular in v2)
// Tests the REPEATED_SINGLE conflict type where cardinality differs.
// =============================================================================

message RepeatedSingleConflicts {
    // Case 1: optional int32 in v2 - was repeated int32 in v1
    optional int32 items = 1;            // was repeated int32 items in v1

    // Case 2: optional string in v2 - was repeated string in v1
    optional string tags = 2;            // was repeated string tags in v1

    // Case 3: optional float in v2 - was repeated float in v1
    optional float scores = 3;           // was repeated float scores in v1

    // Non-conflicting fields
    required string id = 10;
    optional string name = 11;

    // V2-only fields
    optional string category = 12;
}

// =============================================================================
// NESTED ALL CONFLICTS
// Comprehensive test for ALL conflict types in nested structures.
// Tests WIDENING, INT_ENUM, STRING_BYTES, FLOAT_DOUBLE, SIGNED_UNSIGNED in nested message.
// =============================================================================

message NestedAllConflicts {
    required string id = 1;

    // Nested message with ALL types of conflicts (v2 versions)
    message NestedData {
        // WIDENING: was int32 in v1 -> int64 in v2
        required int64 widening_value = 1;    // was int32 in v1

        // INT_ENUM: was int32 in v1 -> CodeEnum in v2
        required CodeEnum enum_code = 2;      // was int32 in v1

        // STRING_BYTES: was string in v1 -> bytes in v2
        optional bytes text_data = 3;         // was string in v1

        // FLOAT_DOUBLE: was float in v1 -> double in v2
        required double precision = 4;        // was float in v1

        // SIGNED_UNSIGNED: was int32 in v1 -> uint32 in v2
        required uint32 counter = 5;          // was int32 in v1

        // Non-conflicting
        optional string label = 10;

        // V2-only field
        optional string metadata = 11;
    }

    required NestedData data = 2;
    optional string description = 10;

    // V2-only field
    optional Date created_at = 11;
}

// =============================================================================
// OPTIONAL_REQUIRED CONFLICTS (optional in v1 -> required in v2)
// =============================================================================

message OptionalRequiredConflicts {
    // Case 1: optional in v1, required in v2
    required string name = 1;

    // Case 2: optional int in v1, required in v2
    required int32 count = 2;

    // Case 3: optional message in v1, required in v2
    required Date timestamp = 3;

    // Non-conflicting: required in both versions
    required string id = 10;

    // V2-only field
    optional string extra = 11;
}

